alignment fixed

--- a/css/Quiet.css
+++ b/css/Quiet.css
@@ -1788,4 +1788,4 @@ div.control-group .shortcut-recorder input[type=text] {
 
 .guilds-wrapper .guild-separator:after {margin-left: -5px;margin-right: 10px;}
 
-.guilds-wrapper .guilds .guild.selected:before {height: 35px;margin-top: -16px;}
+.guilds-wrapper .guilds .guild.selected:before {height: 35px;margin-top: -18px;}
